(bug 39040) The Wikimedia logo is too close to the change ID

--- a/files/gerrit/skin/GerritSite.css
+++ b/files/gerrit/skin/GerritSite.css
@@ -47,7 +47,7 @@ a.gwt-InlineHyperlink {
 
 .wm-gerrit-heading {
 	margin: 0;
-	padding: 14px 17px;
+	padding: 14px 0 0 17px;
 	font-family: 'PT Sans', sans-serif;
 	font-weight: normal;
 	letter-spacing: -1px;
